--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,12 +10,7 @@
         </ul>
           <ul class="right hide-on-med-and-down" >
             <li><a href="/about">本站介紹</a></li>
-            <li><a href="/issues">關注議題</a>
-              <ul class="dropdown">
-                  <li><a href="/about">Item One</a></li>
-                  <li><a href="/issues">Item Two</a></li>
-                  <li><a href="/resource">Item Three</a></li> 
-              </ul></li>
+            <li><a href="/issues">關注議題</a></li>
             <li><a href="/resource">資源工具</a></li>              
           </ul>
 
