--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,7 +11,8 @@
           <ul class="right hide-on-med-and-down" >
             <li><a href="/about">本站介紹</a></li>
             <li><a href="/issues">關注議題</a></li>
-            <li><a href="/resource">資源工具</a></li>              
+            <li><a href="/resource">資源工具</a></li>
+            <li><a href="/join-us">參與支持</a></li>              
           </ul>
 
           <ul id="nav-mobile" class="side-nav">
