--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -37,7 +37,7 @@ layout: default
             <h2 class="center light-blue-text"><i class="material-icons">person</i></h2>
             <h5 class="center">強化權利主體動能</h5>
 
-            <p class="light">By utilizing elements and principles of Material Design, we were able to create a framework that incorporates components and animations that provide more feedback to users. Additionally, a single underlying responsive system across all platforms allow for a more unified user experience.</p>
+            <p class="light">過去台灣，可辨識身份的個人資料，被政府高度集中化的收集管理；而現在，除了公家機關，個資則益發流動於不同的商業部門與私人企業。當事人對自身資料的掌控大幅被削弱，個資如何被利用，是否將對當事人會造成未預期的傷害或歧視待遇，無人可以斷言。MyData 主張確保當事人對自身個資的充份知情、自由自主的決定權利。</p>
           </div>
         </div>
 
@@ -46,7 +46,7 @@ layout: default
             <h2 class="center light-blue-text"><i class="material-icons">group_add</i></h2>
             <h5 class="center">促進多方對話合作</h5>
 
-            <p class="light">We have provided detailed documentation as well as specific code examples to help new users get started. We are also always open to feedback and can answer any questions a user may have about Materialize.</p>
+            <p class="light">個資課題，目前不僅衝擊著每一位個資主體者，也連動著各方營運者的業務操作與數位基礎設施的發展，它需要廣納各方利害關係者的經驗與意見，以實現個資當事人的最佳利益全體社會的最大福祉。</p>
           </div>
         </div>
       </div>
