--- a/_layouts/default_grid.html
+++ b/_layouts/default_grid.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: "zh-tw" }}">
 
-  {% include head.html %}
+  {% include head_grid.html %}
 
   <body>
 
