--- a/_includes/script.html
+++ b/_includes/script.html
@@ -2,3 +2,5 @@
 <script src="{{ "js/jquery.min.js" | relative_url }}"></script>
 <script src="{{ "js/materialize.min.js" | relative_url }}"></script>
 <script src="{{ "js/init.js" | relative_url }}"></script>
+<script src="{{ "js/yrss.min.js" | relative_url }}"></script>
+<script src="{{ "js/yrss.js" | relative_url }}"></script>
