--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -46,7 +46,7 @@ layout: default
             <h2 class="center light-blue-text"><i class="material-icons">group_add</i></h2>
             <h5 class="center">促進多方對話合作</h5>
 
-            <p class="light">個資課題，目前不僅衝擊著每一位個資主體者，也連動著各方營運者的業務操作與數位基礎設施的發展，它需要廣納各方利害關係者的經驗與意見，以實現個資當事人的最佳利益全體社會的最大福祉。</p>
+            <p class="light">個資課題不僅衝擊著每一位個資主體者，也連動著各方營運者的業務操作與數位基礎設施的發展，它需要廣納各方利害關係者的經驗與意見，以實現個資當事人的最佳利益全體社會的最大福祉。MyData 承諾在前二項原則下，開誠佈公地與其它部門合作。</p>
           </div>
         </div>
       </div>
