--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,14 +17,10 @@
 
           <ul id="nav-mobile" class="side-nav">
             <li><a href="#">Home</a></li>
-                            {% if page_paths %}
-                {% for path in page_paths %}
-                    {% assign my_page = site.pages | where: "path", path | first %}
-                    {% if my_page.title %}
-                    <li><a href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a></li>
-                    {% endif %}
-                {% endfor %}
-            {% endif %} 
+            <li><a href="/about">本站介紹</a></li>
+            <li><a href="/issues">關注議題</a></li>
+            <li><a href="/resource">資源工具</a></li>
+            <li><a href="/join-us">參與支持</a></li>    
           </ul>        
 
       <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
