--- a/_layouts/default_grid.html
+++ b/_layouts/default_grid.html
@@ -18,7 +18,7 @@
 
 
   <script>
-                    var feed1 = 'https://netpolicy.taipei.io/feed';
+                    var feed1 = 'https://medium.com/feed/@mydata_taiwan';
                     $('#feed1').rssfeed(feed1, {
                         ssl: true,
                         limit: 6,
