--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,8 +13,6 @@ layout: default
       <div class="row center">
         <a href="/declaration" id="download-button" class="btn-large waves-effect waves-light orange">MyData 宣言</a>
       </div>
-      <br><br>
-
     </div>
   </div>
 
@@ -50,7 +48,10 @@ layout: default
           </div>
         </div>
       </div>
-
+     <div class="row center">
+        <a href="https://medium.com/@mydata_taiwan" id="download-button" class="btn-large waves-effect waves-light orange">MyData Taiwan on Medium</a>
+      </div>
+      <br><br>
     </div>
       
     </div>
