--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,7 @@ layout: default
     <article class="post" itemscope itemtype="http://schema.org/BlogPosting">
 
       <header class="post-header">
-        <h1 class="post-title" itemprop="name headline">{{ page.title | escape }}</h1>
+        <h1 class="post-title orange-text" itemprop="name headline">{{ page.title | escape }}</h1>
         <p class="post-meta">
        
           {% if page.author %}
