--- a/_includes/header.html
+++ b/_includes/header.html
@@ -51,13 +51,16 @@
             <li><a href="#">Home</a></li>
             <li><a href="/about">本站介紹</a></li>
             <li><a href="/issues">關注議題</a></li>
-                     <ol>
-                        <li><a href="#">網路足跡</a></li>
-                        <li><a href="#">財務資訊</a></li>
-                        <li><a href="#">健康資料</a></li>                      
-                      </ol>
-                    </li>
+                <ol> 
+                   <li><a href="/issues/internet">網路足跡</a></li>
+                   <li><a href="/issues/finance">財務資訊</a></li>
+                   <li><a href="/issues/health">健康資料</a></li></ol>                        
             <li><a href="/resource">資源工具</a></li>
+                  <ol>
+                   <li><a href="/resource/pdpr">個人資料保護法規</a></li>
+                   <li><a href="/resource/rd">盡責資料管理</a></li>
+                   <li><a href="/resource/#">something</a></li>                     
+                      </ol>
             <li><a href="/join-us">參與支持</a></li>    
           </ul>        
 
