--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -52,6 +52,7 @@ layout: default
         <a href="https://medium.com/@mydata_taiwan" id="download-button" class="btn-large waves-effect waves-light orange"><i class="fab fa-medium-m"></i>&nbsp&nbsp MyData Taiwan </a>
       </div>
       <br><br>
+    <!-- start feedwind code --> <script type="text/javascript" src="https://feed.mikle.com/js/fw-loader.js" data-fw-param="72088/"></script> <!-- end feedwind code -->
     </div>
       
     </div>
@@ -76,4 +77,4 @@ layout: default
     </div>
 </div>
 
-  </div>
+  </div>	
