--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,4 +5,9 @@ layout: default
 
     {{ content }}
 
+ </div>
+ <div style="background: #ffffff">
+    <div class="container last-post">
+<!-- start feedwind code --> <script type="text/javascript" src="https://feed.mikle.com/js/fw-loader.js" data-fw-param="72088/"></script> <!-- end feedwind code -->
+</div>
 </div>
